# qa_hackathon_backend

./: .env.example  .gitignore  Dockerfile  Lambda.Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  main.py
app/api/routes/: test_case.py  user_story.py  users.py
app/config/: prompts.yaml
app/core/: config.py  llm.py  security.py
app/schemas/: user_story.py
app/src/: agents.py  test_case_generator.py  user_story_generator.py
scripts/: deployment.py
