[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
uvicorn = {extras = ["standard"], version = ">=0.24.0.post1"}
fastapi = ">=0.109.1"
python-multipart = ">=0.0.7"
email-validator = ">=2.1.0.post1"
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
tenacity = ">=8.2.3"
pydantic = ">=2.0"
emails = ">=0.6"
gunicorn = ">=22.0.0"
jinja2 = ">=3.1.4"
alembic = ">=1.12.1"
httpx = ">=0.25.1"
psycopg = {extras = ["binary"], version = ">=3.1.13"}
sqlmodel = ">=0.0.21"
bcrypt = "4.0.1"
pydantic-settings = ">=2.2.1"
sentry-sdk = {extras = ["fastapi"], version = ">=1.40.6"}
pyjwt = ">=2.8.0"
openai = ">=1.46.1"
boto3 = ">=1.35.29"
mangum = ">=0.19.0"
langchain-core = ">=0.3.21"
langgraph = ">=0.2.53"
langchain-openai = ">=0.2.10"
langgraph-checkpoint-sqlite = ">=2.0.1"
langchain-groq = ">=0.2.1"
langchain = ">=0.3.9"
streamlit = ">=1.40.2"
annotated-types = ">=0.7.0"
pycognito = ">=2024.5.1"
pocketbase = ">=0.14.0"
langchain-community = ">=0.3.11"
pypdf = ">=5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
mypy = ">=1.8.0"
ruff = ">=0.2.2"
pre-commit = ">=3.6.2"
types-passlib = ">=1.7.7.20240106"
coverage = ">=7.4.3"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"